# b3fileparser

./: .gitignore  LICENSE  README.md  b3_meta_data.py  b3fileparser.py  pyproject.toml  requirements.txt  setup.py
b3fileparser/: __init__.py  b3_meta_data.py  b3fileparser.py  b3parser.py  b3parser_base.py  b3parser_pandas.py  b3parser_polars.py
b3fileparser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: b3_meta_data.py
tests/: test_b3file.py
